# stmtmgr

./: .gitignore  README.md
scripts/duplicate-file-scanner/: README.md  config.yaml  report.csv
scripts/duplicate-file-scanner/src/: __init__.py  database.py  main.py  report_generator.py  scanner.py  utils.py
scripts/duplicate-file-scanner/tests/: test_database.py  test_report_generator.py  test_scanner.py
scripts/stmt-proc-py/: README.md  setup.py
scripts/stmt-proc-py/src/: classifier_metadata.csv  config.json  main.py  query1.sql
scripts/stmt-proc-py/src/classifier/: auto_classifier.py  classification_completer.py  classifier.py
scripts/stmt-proc-py/src/processors/: __init__.py  hdfc_bank_acct_processor.py  hdfc_credit_card_processor.py  statement_processor.py  statement_processor_provider.py
scripts/stmt-proc-py/src/store/: txn_store.py
scripts/stmt-proc-py/src/tests/: __init__.py  main.py  test_classifier.py  test_statement_processor_provider.py  test_txn_store.py
scripts/stmt-proc-py/src/utils/: helpers.py
scripts/stmt-proc-wasm/: Cargo.toml  README.md  wasm-bindgen.toml
scripts/stmt-proc-wasm/src/: hdfc_bank_acct_processor.rs  hdfc_credit_card_processor.rs  lib.rs  statement_processor.rs  statement_processor_provider.rs  txn_store.rs
scripts/stmt-proc-wasm/tests/: test_statement_processor_provider.rs
