[package]
name = "stmt-proc-wasm"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "console"] }
js-sys = { version = "0.3" }
chrono = "0.4"
md5 = "0.7"
csv = "1.1"
calamine = "0.20.0" # Downgrade to a compatible version
zip = "0.5.11" # Ensure compatibility with calamine
bzip2 = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bzip2 = "0.4"
